manifests/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  namespace: pgadmin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: data
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin-container
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
          volumeMounts:
            - name: data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pgadmin-pvc-longhorn
