manifests/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: pgadmin
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
